# otel-actix-example

./: .gitignore  Cargo.toml  Containerfile  README.md  deployment.yml  ingress.yaml  ingress.yml  podman-compose-otel-col.yaml  podman-compose.yaml  podman-compose.yml
.github/: ci.yaml
.github/workflows/: ci.yaml
charts/: Chart.yaml  values.yaml
charts/app/: Chart.yaml
charts/app/templates/: pod.yaml  service.yaml
charts/infra/: Chart.yaml  values.yaml
charts/infra/charts/: opentelemetry-collector-0.110.3.tgz  opentelemetry-collector-0.111.1.tgz
charts/templates/: ingress.yaml  pod.yaml  service.yaml
hc/: Chart.yaml
hc/charts/: jaeger-3.3.3.tgz
hc/charts/app/: Chart.yaml
hc/templates/: ingress.yaml  pod.yaml  service.yaml
src/: main.rs  otel.rs
