[package]
name = "otel-actix-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# unused dependencies by purpose
actix = "0.13.3"
actix-cors = "0.7"
actix-http = "3.3.1"
actix-tls = "3"
actix-web = "4.3.1"
actix-web-extras = "0.1"
actix-web-httpauth = "0.8"
actix-web-opentelemetry = "0.20"
actix-web-prom = "0.9.0"
actix-web-static-files = "4.0.1"
env_logger = "0.11.0"
log = "0.4.19"

opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"]}

tokio = "1.30.0"
tokio-stream = "0.1.17"
tokio-util = "0.7"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "ansi"] }
