[package]
name = "otel-actix-example"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
# actix-web-opentelemetry = "0.22"
env_logger = "0.11.0"
log = "0.4.19"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
# tokio = "1.45.0"
tracing = "0.1"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "ansi",
] }
